# fiap_tech_challenge_2

./: .gitignore  README.md  dockerfile  manage.py  pyproject.toml
core/entities/: models.py
core/usecases/: customer_usecase.py  order_usecase.py  product_usecase.py
infrastructure/database/: django_customer_gateway.py  django_order_gateway.py  django_product_gateway.py
infrastructure/django_app/config/: asgi.py  settings.py  urls.py  wsgi.py
infrastructure/django_app/customers/: apps.py  models.py  serializers.py  urls.py  views.py
infrastructure/django_app/customers/migrations/: 0001_initial.py
infrastructure/django_app/orders/: apps.py  models.py  serializers.py  urls.py  views.py
infrastructure/django_app/orders/migrations/: 0001_initial.py  0002_order_payment_status.py
infrastructure/django_app/products/: apps.py  models.py  serializers.py  urls.py  views.py
infrastructure/django_app/products/migrations/: 0001_initial.py
infrastructure/kubernetes/: deployment.yaml  django-configmap.yaml  entrypoint.sh  hpa.yaml  ingress.yaml  migration-job.yaml  postgres-deployment.yaml  postgres-secret.yaml  service.yaml
interface_adapters/controllers/: customer_controller.py  order_controller.py  product_controller.py
interface_adapters/gateways/: customer_gateway.py  order_gateway.py  product_gateway.py
